# guard-scanner

./: .clawhubignore  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  README_ja.md  ROADMAP-RESEARCH.md  ROADMAP.md  SECURITY.md  SESSION.md  SKILL.md  SOUL.md  STATUS.md  _meta.json  guard-lab.sh  guard-scanner  openclaw-plugin.mts  openclaw.plugin.json  package-lock.json  package.json  parent_memory  scan_report.txt  test_output.txt  tsconfig.build.json  tsconfig.json  tsup.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
docs/: TASKLIST_RESEARCH_FIRST_V1.md  THREAT_TAXONOMY.md  badge.json  compatibility.json  index.html  openclaw-compatibility-audit.md  openclaw-continuous-compatibility-plan.md  public-safe-boundary.md
hooks/: context.ts
output/: COMMUNITY_POST_v3.4.0.md  COMMUNITY_PUSH_2026-02-20.md
research/: v21-deep-research-2026-03-14-EXTENSION.md  v21-deep-research-2026-03-14.md
rust/guard-scan-core/: Cargo.toml
rust/guard-scan-core/src/: lib.rs  main.rs  memory_integrity.rs  soul_hard_gate.rs
scripts/: audit-baseline.js  audit-baseline.ts  benchmark.js  benchmark.ts  check-openclaw-upstream.ts  clawhub-scan.js  clawhub-scan.ts  corpus-metrics.ts  generate-capabilities.js  generate-capabilities.ts  generate-readme-metrics.js  generate-readme-metrics.ts  generate-readme-stats.ts  generate-rule-docs.ts  generate-sbom.ts  lint.ts  oss-release-report.ts  perf-regression.ts  release-gate.js  release-gate.ts  rust-parity.ts  scan-all.ts  sync-spec.ts  (+8 more)
(+222 files in other folders)
