[package]
name = "guard-scan-core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.9"
